[package]
name = "git_release"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.18", features = ["derive"] }
indicatif = "0.17.3"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
toml = "0.5"
serde = { version = "1.0.137", optional = true, features = ["derive"] }
microkv = "0.2.9"

[features]
default = ["std"]
std = [ "serde" ]